src/objects/inscor__Company_Part_Master_Approval__c.object
<CustomObject>
    <fields>
        <fullName>inscor__CQ_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CQ Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>inscor__Company__c</referenceTo>
        <relationshipLabel>Company Part Master Approval</relationshipLabel>
        <relationshipName>Company_Part_Master_Approval</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Conversion_ID__c</fullName>
        <label>Conversion ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__External_Reference_ID__c</fullName>
        <externalId>true</externalId>
        <label>External Reference ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Lease_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lease Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__PO_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PO Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Part_Master__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Part Master</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Company Part Master Approval</relationshipLabel>
        <relationshipName>Company_Part_Master_Approval</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__RFQ_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RFQ Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__RO_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RO Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__SO_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SO Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__WO_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>WO Approved</label>
        <type>Checkbox</type>
    </fields>
    <label>Company Part Master Approval</label>
    <listViews>
        <fullName>inscor__All</fullName>
        <columns>NAME</columns>
        <columns>inscor__Part_Master__c</columns>
        <columns>inscor__CQ_Approved__c</columns>
        <columns>inscor__PO_Approved__c</columns>
        <columns>inscor__RFQ_Approved__c</columns>
        <columns>inscor__RO_Approved__c</columns>
        <columns>inscor__SO_Approved__c</columns>
        <columns>inscor__WO_Approved__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>inscor__Parts_to_Review</fullName>
        <columns>NAME</columns>
        <columns>inscor__Part_Master__c</columns>
        <columns>inscor__CQ_Approved__c</columns>
        <columns>inscor__PO_Approved__c</columns>
        <columns>inscor__RFQ_Approved__c</columns>
        <columns>inscor__RO_Approved__c</columns>
        <columns>inscor__SO_Approved__c</columns>
        <columns>inscor__WO_Approved__c</columns>
        <filterScope>Everything</filterScope>
        <label>Parts to Review</label>
    </listViews>
    <nameField>
        <displayFormat>CPMA-{0}</displayFormat>
        <label>Company Part Master Approval Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Company Part Master Approval</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>